--- a/src/pages/main/post.css
+++ b/src/pages/main/post.css
@@ -1,8 +1,20 @@
+.postspace {
+  display: grid;
+  grid-template-rows: max-content;
+  grid-row-gap: 10px;
+}
+
+.postrow {
+  background-color: rgb(243, 242, 245);
+  border-radius: 10px;
+  padding: 0 20px 5px;
+}
 button.like {
   font-size: 25px;
-  background-color: white;
   border: none;
-  margin: 0px 5px;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(243, 242, 245);
 }
 
 button.like:hover {
@@ -24,6 +36,8 @@ div .likes {
   padding: 0;
   display: flex;
   justify-content: end;
+  align-items: center;
+  max-height: 40px;
 }
 
 p .likesdisplay {
