--- a/src/pages/main/post.css
+++ b/src/pages/main/post.css
@@ -35,7 +35,7 @@ div .likes {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   max-height: 40px;
 }
